revised to http://

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <footer>
         <div class="c-footerWrap">
             <div class="c-footerWrap__left">
-                <p>&copy;2020 Lawrence S. Own. All rights reserved. Testing.</p>
+                <p>&copy;2020 Lawrence S. Own. All rights reserved.</p>
             </div>
             <div class="c-footerWrap__right">
                 <ul class="c-footer__ul">
