--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                         </a> 
                     </li>
                     <li class="c-proj-grid-li--style">
-                        <a class="c-proj-grid-a" href="http://voxa.co/products-2/blade" target="_blank">
+                        <a class="c-proj-grid-a" href="https://voxa.co/products-2/blade" target="_blank">
                             <img class="c-proj-img" src="images/projects/blade.png" alt="Mochii microscope">
                             <h1 class="c-proj-grid-h1">Blade: Ultra-high throughput imaging</h1>
                             <h2 class="c-proj-grid-h2">Voxa</h2>
