added about pic

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                     <p>I like to flex my brain muscles through designing cool things, and my body muscles through dance.</p>
                 </section>
                 <section class="c-about-flex__right">
-                    <img class="c-about-profileimg" src="images/home/hucklecat.png">
+                    <img class="c-about-profileimg" src="images/home/about_pic.png">
                 </section>
             </div>
         </main>
