added bold nav bars

--- a/experience.html
+++ b/experience.html
@@ -17,7 +17,7 @@
                     <ul class="c-nav-ul o-ul--flexstyle">
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="projects.html">Projects</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="publications.html">Publications</a></li>
-                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="experience.html">Experience</a></li>
+                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a c-nav-ul__li--selected" href="experience.html">Experience</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="about.html">About</a></li>
                     </ul>
                 </nav>
