--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="projects.html">Projects</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="publications.html">Publications</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="experience.html">Experience</a></li>
-                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="about.html">About</a></li>
+                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a c-nav-ul__li--selected" href="about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
