--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
                 </div>                 
                 <nav class="c-headerWrap-right">
                     <ul class="c-nav-ul o-ul--flexstyle">
-                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="projects.html">Projects</a></li>
+                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a c-nav-ul__li--selected" href="projects.html">Projects</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="publications.html">Publications</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="experience.html">Experience</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="about.html">About</a></li>
