added spotify link

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li class="c-footer__li">
-                        <a href="">
+                        <a href="https://open.spotify.com/user/aureias?si=_UHDT7xDSQ2za8hAzEzoSg">
                             <img class="o-img--centerimg c-footer-logo" src="images/icons/spotify_icon.png" alt="Spotify">
                         </a>
                     </li>
