--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         <main>
             <div class="c-sectionGrid">
                 <section class="c-sectionGrid__top">
-                    <p><b>Lawrence Own</b> is a neuroscientist turned Chief Engineer at <a href="https://voxa.co" class="">Voxa</a>, working towards increased access to nano-imaging (even to astronauts at NASA!).</p>
+                    <p><b>Lawrence Own</b> is a neuroscientist turned Chief Engineer at <a href="https://voxa.co" class="">Voxa</a>. 
+                    <br>
+                    <br>
+                    I make electronics that increase the accessibility of nano-imaging technology (even astronauts on the International Space Station!).</p>
                     <br><br>
                     <p>I find delight in design, research, and engineering. My work flows between the fields of biology, electronics, and software. </p>
                 </section>
