updated meta tags

--- a/about.html
+++ b/about.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8" />
+        <meta name="author" content="Lawrence Own">
+        <meta name="description" content="About description from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>lsown - About</title>
