updated title & experience page

--- a/experience.html
+++ b/experience.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Experience list from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>lsown - Home</title>
+        <title>Experience | Lawrence Own</title>
     </head>
     <body>
         <header>
@@ -72,11 +72,12 @@
                 <div class="c-exp-sectionGrid__info">
                     <h1>Graduate Student Researcher</h1>
                     <h1>University of Michigan</h1>
+                    <p>As a neuroscience graduate student I...</p>
                     <ul>
-                        <li>Using a mouse model of child neglect, maternal separation, identified long-term changes in behavior and neurotransmitter activity for use in developing treatments for mental illness.</li>
+                        <li>Investigated the relationship between early adverse experiences and long-term changes behavior & neuronal gene expression.</li>
                         <li>Extensive behavioral phenotyping of a tryptophan hydroxylase 2 knockdown mouse line.</li>
                         <li>Developed a novel tissue extraction method using common laboratory reagents, improving specificity and speed while preserving sample integrity and cutting costs.</li>
-                        <li>In an environment of funding cuts, developed or reverse-engineered reagents and procedures from commercial research kits.</li>
+                        <li>In an environment of limited funding, developed or reverse-engineered reagents and procedures from commercial research kits.</li>
                     </ul>
                 </div>                
 
@@ -86,9 +87,11 @@
                 <div class="c-exp-sectionGrid__info">
                     <h1>Graduate Student Instructor</h1>
                     <h1>University of Michigan</h1>
-                    <p>Taught 10 semesters across both the Psychology and Biology Departments. These courses included Introduction to Neuropsychology (Psych 350), Psychology (Psych 111), Biopsychology (Psych 230), Neurobiology (Bio 222), Cellular and Molecular Neuroscience Lab (MCDB 423). Responsibilities included leading discussion, synthesizing new material, lectures, writing and grading exams, and general administration.</p>
+                    <p>5 years of experience teaching topics spanning across the fields of Psychology and Biology. 
                     <br>
                     <ul>
+                        <li>Courses included Introduction to Neuropsychology, Psychology, Biopsychology, Neurobiology, Cellular and Molecular Neuroscience Lab.</li>
+                        <li>Responsibilities included leading discussion, synthesizing new material, lectures, writing and grading exams, and general administration.</li>
                         <li>Improved section grades by 4% above course average using blogging, web screencasts, and facebook groups to increase out-of-classroom interactivity and group feedback.</li>
                         <li>Developed lab modules for open-source hardware as a low-cost approach to science.</li>
                     </ul>
