--- a/projects-ntx.html
+++ b/projects-ntx.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="author" content="Lawrence Own">
-        <meta name="description" content="About description from Lawrence Own's personal website">
+        <meta name="description" content="Projects from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>About - Lawrence Own</title>
+        <title>Projects - NTX | Lawrence Own</title>
     </head>
     <body>
         <header>
@@ -17,27 +17,42 @@
                 </div>                 
                 <nav class="c-headerWrap-right">
                     <ul class="c-nav-ul o-ul--flexstyle">
-                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="projects.html">Projects</a></li>
+                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a c-nav-ul__li--selected" href="projects.html">Projects</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="publications.html">Publications</a></li>
                         <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="experience.html">Experience</a></li>
-                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a c-nav-ul__li--selected" href="about.html">About</a></li>
+                        <li class="c-nav-ul__li"><a class="c-nav-ul-li-a" href="about.html">About</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
-            <div class="c-about-flex">
-                <section class="c-about-flex__left">
-                    <p>In a past life, I was a neuroscientist investigating the interplay between early childhood experiences & its consequence on long-term behavioral & genetic imprints.</p> 
-                    <br>
-                    <p>These days, I pick up hardware and software engineering skills.</p>
-                    <br>
-                    <p>I like to flex my brain muscles through designing cool things, and my body muscles through dance.</p>
+            <section class="">
+                <h1>Nanotank Water Exchange - NTX</h1>
+                <section>
+                <h2>Problem Space</h2>
+                <p>A nano-tank, usually &lt 5 gallons, tend to be <em>more</em> difficult to maintain due to a reduced water volume. This limits its buffering capacity against waste products, and can cause a tank to crash out from chemical imbalances.</p><br>
+                <p>To prevent this, frequent water changes are required to exchange the waste-contaminated water with pure water. However, these changes also need to be minimally disruptive to the fish. This demands
+                    <ul class="c-subproj-ul">
+                        <li>&lt 25% total volume</li>
+                        <li>Gentle exchanges</li>
+                        <li></li>
+                    </ul>
+                </p>
+                <ul>
+                    <li>Time-consuming</li>
+                    <li>Extra equipment</li>
+                    <li>Stress to pet</li>
+                </ul>
                 </section>
-                <section class="c-about-flex__right">
-                    <img class="c-about-profileimg" src="images/home/about_pic.png">
+                <section>
+                <h2>Solution</h2>
+                <p></p>
                 </section>
-            </div>
+                <section>
+                <h2>Implementation</h2>
+                </section>
+                </ul>
+            </section>            
         </main>
     </body>
     <footer>
