--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Projects from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>lsown - Projects</title>
+        <title>Projects - Lawrence Own</title>
     </head>
     <body>
         <header>
@@ -45,7 +45,7 @@
                     <li class="c-proj-grid-li--style">
                         <a class="c-proj-grid-a" href="" target="_blank">
                             <img class="c-proj-img" src="images/projects/nano.png" alt="Nano Water Exchanger">
-                            <h1 class="c-proj-grid-h1">N2X: Auto Nano-tank Water Exchange</h1>
+                            <h1 class="c-proj-grid-h1">NTX: Auto Nano-tank Water Exchange</h1>
                             <h2 class="c-proj-grid-h2">Personal Project</h2>
                         </a> 
                     </li>
