--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Publication list from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>lsown - Publications</title>
+        <title>Publications - Lawrence Own</title>
     </head>
     <body>
         <header>
