--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Splash homepage of Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_32.png"/>
         <title>Home | Lawrence Own</title>
     </head>
     <body>
@@ -92,6 +93,11 @@
             </div>
             <div class="c-footerWrap__right">
                 <ul class="c-footer__ul">
+                    <li class="c-footer__li">
+                        <a href="https://github.com/lsown" target="_blank">
+                            <img class="o-img--centerimg c-footer-logo" src="images/icons/gitcat_icon.png" alt="GitHub">
+                        </a>
+                    </li>
                     <li class="c-footer__li">
                         <a href="https://www.linkedin.com/in/lawrence-own" target="_blank">
                             <img class="o-img--centerimg c-footer-logo" src="images/icons/linkedin_icon.png" alt="LinkedIn">
