--- a/projects-ntx.html
+++ b/projects-ntx.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Projects from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_32.png"/>
         <title>Projects - NTX | Lawrence Own</title>
     </head>
     <body>
@@ -26,32 +27,37 @@
             </div>
         </header>
         <main>
-            <section class="">
-                <h1>Nanotank Water Exchange - NTX</h1>
-                <section>
-                <h2>Problem Space</h2>
-                <p>A nano-tank, usually &lt 5 gallons, tend to be <em>more</em> difficult to maintain due to a reduced water volume. This limits its buffering capacity against waste products, and can cause a tank to crash out from chemical imbalances.</p><br>
-                <p>To prevent this, frequent water changes are required to exchange the waste-contaminated water with pure water. However, these changes also need to be minimally disruptive to the fish. This demands
-                    <ul class="c-subproj-ul">
-                        <li>&lt 25% total volume</li>
-                        <li>Gentle exchanges</li>
-                        <li></li>
-                    </ul>
-                </p>
-                <ul>
-                    <li>Time-consuming</li>
-                    <li>Extra equipment</li>
-                    <li>Stress to pet</li>
-                </ul>
+            <h1 class="o-h1--margins">Nanotank Water Exchange System</h1>
+            <section class="c-projntx-flexWrap">              
+                <section class="c-projntx-flexItem">
+                    <h2>Problem Space</h2>
+                    <div class ="c-projntx-gridWrap">
+                        <div class="c-projntx-gridWrap-left">
+                            <img src="images/projects/nanotank.jpg" alt="nanotank example" class="c-projntx-img">
+                        </div>
+                        <div class="c-projntx-gridWrap-right">
+                            <p>Nanotanks &lt 2-3 gallons, with its marginal footprint, are ideal for small spaces and live decoration. However, they also tend to be difficult to maintain. This is due to the minimal volume and its associated limitations in buffering capacity against waste products. and can cause a tank to crash out from chemical imbalances.</p><br>
+                            <p>To prevent this, frequent water changes are required to exchange the waste-contaminated water with pure water. However, these changes also need to be minimally disruptive to the fish. This demands</p>
+                            <ul class="c-projntx-ul">
+                                <li>&lt 25% total volume</li>
+                                <li>Gentle exchanges</li>
+                                <li></li>
+                            </ul>
+                            <ul class="c-projntx-ul">
+                                <li>Time-consuming</li>
+                                <li>Extra equipment</li>
+                                <li>Stress to pet</li>
+                            </ul>
+                        </div>
+                    </div>                       
                 </section>
-                <section>
-                <h2>Solution</h2>
-                <p></p>
+                <section class="c-projntx-flexItem">
+                    <h2>Solution</h2>
+                    <p></p>
                 </section>
-                <section>
-                <h2>Implementation</h2>
+                <section class="c-projntx-flexItem">
+                    <h2>Implementation</h2>
                 </section>
-                </ul>
             </section>            
         </main>
     </body>
@@ -62,6 +68,11 @@
             </div>
             <div class="c-footerWrap__right">
                 <ul class="c-footer__ul">
+                    <li class="c-footer__li">
+                        <a href="https://github.com/lsown" target="_blank">
+                            <img class="o-img--centerimg c-footer-logo" src="images/icons/gitcat_icon.png" alt="GitHub">
+                        </a>
+                    </li>
                     <li class="c-footer__li">
                         <a href="https://www.linkedin.com/in/lawrence-own" target="_blank">
                             <img class="o-img--centerimg c-footer-logo" src="images/icons/linkedin_icon.png" alt="LinkedIn">
