--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
         <meta name="description" content="Projects from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_32.png"/>
         <title>Projects - Lawrence Own</title>
     </head>
     <body>
@@ -43,14 +44,14 @@
                         </a> 
                     </li>
                     <li class="c-proj-grid-li--style">
-                        <a class="c-proj-grid-a" href="" target="_blank">
+                        <a class="c-proj-grid-a" href="projects-ntx.html" target="">
                             <img class="c-proj-img" src="images/projects/nano.png" alt="Nano Water Exchanger">
                             <h1 class="c-proj-grid-h1">NTX: Auto Nano-tank Water Exchange</h1>
                             <h2 class="c-proj-grid-h2">Personal Project</h2>
                         </a> 
                     </li>
                     <li class="c-proj-grid-li--style">
-                        <a class="c-proj-grid-a" href="" target="_blank">
+                        <a class="c-proj-grid-a" href="" target="">
                             <img class="c-proj-img" src="images/projects/circuitdecor.png" alt="Mochii microscope">
                             <h1 class="c-proj-grid-h1">Circuit Decor: Electronic Art Displays</h1>
                             <h2 class="c-proj-grid-h2">Personal Project</h2>
@@ -67,6 +68,11 @@
             </div>
             <div class="c-footerWrap__right">
                 <ul class="c-footer__ul">
+                    <li class="c-footer__li">
+                        <a href="https://github.com/lsown" target="_blank">
+                            <img class="o-img--centerimg c-footer-logo" src="images/icons/gitcat_icon.png" alt="GitHub">
+                        </a>
+                    </li>
                     <li class="c-footer__li">
                         <a href="https://www.linkedin.com/in/lawrence-own" target="_blank">
                             <img class="o-img--centerimg c-footer-logo" src="images/icons/linkedin_icon.png" alt="LinkedIn">
