--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,13 @@
         <meta name="description" content="Publication list from Lawrence Own's personal website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_32.png"/>
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_32.png" sizes="32x32"/>
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_57.png" sizes="57x57"/>
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_76.png" sizes="76x76"/>
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_96.png" sizes="96x96"/>
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_128.png" sizes="128x128"/>
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_192.png" sizes="192x192"/>
+        <link rel="icon" type="image/png" href="images/icons/LSO_favicon_228.png" sizes="228x228"/>
         <title>Publications - Lawrence Own</title>
     </head>
     <body>
