--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                         </a> 
                     </li>
                     <li class="c-proj-grid-li--style">
-                        <a class="c-proj-grid-a" href="https://voxa.co/products-2/blade" target="_blank">
+                        <a class="c-proj-grid-a" href="https://www.voxa.co/solutions/blade" target="_blank">
                             <img class="c-proj-img" src="images/projects/blade.png" alt="Mochii microscope">
                             <h1 class="c-proj-grid-h1">Blade: Ultra-high throughput imaging</h1>
                             <h2 class="c-proj-grid-h2">Voxa</h2>
@@ -57,10 +57,10 @@
                         </a> 
                     </li>
                     <li class="c-proj-grid-li--style">
-                        <a class="c-proj-grid-a" href="" target="">
+                        <a class="c-proj-grid-a" href="https://www.etsy.com/shop/CircuitDecor" target="_blank">
                             <img class="c-proj-img" src="images/projects/circuitdecor.png" alt="Mochii microscope">
                             <h1 class="c-proj-grid-h1">Circuit Decor: Electronic Art Displays</h1>
-                            <h2 class="c-proj-grid-h2">Personal Project</h2>
+                            <h2 class="c-proj-grid-h2">Side Hustle</h2>
                         </a> 
                     </li>
                 </ul>
