Updated projects.html with different h2.

--- a/projects.html
+++ b/projects.html
@@ -50,17 +50,17 @@
                         </a> 
                     </li>
                     <li class="c-proj-grid-li--style">
+                        <a class="c-proj-grid-a" href="https://www.etsy.com/shop/CircuitDecor" target="_blank">
+                            <img class="c-proj-img" src="images/projects/circuitdecor.png" alt="Mochii microscope">
+                            <h1 class="c-proj-grid-h1">Electronic Art Displays</h1>
+                            <h2 class="c-proj-grid-h2">Circuit Decor</h2>
+                        </a> 
+                    </li>
+                    <li class="c-proj-grid-li--style">
                         <a class="c-proj-grid-a" href="projects-ntx.html" target="">
                             <img class="c-proj-img" src="images/projects/nano.png" alt="Nano Water Exchanger">
                             <h1 class="c-proj-grid-h1">NTX: Auto Nano-tank Water Exchange</h1>
                             <h2 class="c-proj-grid-h2">Personal Project</h2>
-                        </a> 
-                    </li>
-                    <li class="c-proj-grid-li--style">
-                        <a class="c-proj-grid-a" href="https://www.etsy.com/shop/CircuitDecor" target="_blank">
-                            <img class="c-proj-img" src="images/projects/circuitdecor.png" alt="Mochii microscope">
-                            <h1 class="c-proj-grid-h1">Circuit Decor: Electronic Art Displays</h1>
-                            <h2 class="c-proj-grid-h2">Side Hustle</h2>
                         </a> 
                     </li>
                 </ul>
