Update experience.html - Added Accenture info
Updated w/ Accenture Industry X work

--- a/experience.html
+++ b/experience.html
@@ -36,7 +36,17 @@
         <h1 class="o-h1--margins">Experience</h1>
             <section class="c-exp-sectionGrid">
                 <div class="c-exp-sectionGrid__date">
-                    <p>Jan 2013 - present</p>
+                    <p>July 2022 - present</p>
+                </div>
+                <div class="c-exp-sectionGrid__info">
+                    <h1>Product Engineer</h1>
+                    <h1>Accenture - Industry X</h1>
+                    <p>Embedded with Meta Reality Labs building automated software and hardware infrastructure.</p>
+                    </div>
+                </div>
+                
+                <div class="c-exp-sectionGrid__date">
+                    <p>Jan 2013 - July - 2022</p>
                 </div>
                 <div class="c-exp-sectionGrid__info">
                     <h1>Chief Engineer</h1>
