--- a/experience.html
+++ b/experience.html
@@ -46,7 +46,7 @@
                 </div>
                 
                 <div class="c-exp-sectionGrid__date">
-                    <p>Jan 2013 - July - 2022</p>
+                    <p>Jan 2013 - July 2022</p>
                 </div>
                 <div class="c-exp-sectionGrid__info">
                     <h1>Chief Engineer</h1>
